[project]
name = "coral-repounittestadvisor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-mcp-adapters==0.1.7",
    "langchain-openai>=0.3.20",
    "pygithub>=2.6.1",
]
